// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers ArrayToHash: ArrayToHash 1`] = `
Object {
  "1": Object {
    "name": "1",
    "other": "2",
  },
  "2": Object {
    "name": "2",
    "other": "2",
  },
}
`;

exports[`helpers ArrayToMap: ArrayToMap 1`] = `
Map {
  "1" => Object {
    "name": "1",
    "other": "2",
  },
  "2" => Object {
    "name": "2",
    "other": "2",
  },
}
`;

exports[`helpers ArrayToMap: ArrayToMap with process 1`] = `
Map {
  "1" => Object {
    "key": "1",
    "name": "1",
    "other": "2",
  },
  "2" => Object {
    "key": "2",
    "name": "2",
    "other": "2",
  },
}
`;

exports[`helpers HashToArray: HashToArray 1`] = `
Array [
  Object {
    "name": "1",
    "other": 1,
  },
  Object {
    "name": "2",
    "other": 2,
  },
]
`;

exports[`helpers HashToArray: HashToArray with process 1`] = `
Array [
  Object {
    "name": "1",
    "other": 1,
  },
  Object {
    "name": "2",
    "other": 2,
  },
]
`;

exports[`helpers HashToMap: HashToMap 1`] = `
Map {
  "1" => Object {
    "name": "1",
    "other": 1,
  },
  "2" => Object {
    "name": "2",
    "other": 2,
  },
}
`;

exports[`helpers HashToMap: HashToMap with process 1`] = `
Map {
  "1" => Object {
    "name": "1",
    "other": 1,
  },
  "2" => Object {
    "name": "2",
    "other": 2,
  },
}
`;

exports[`helpers MapToArray: MapToArray 1`] = `
Array [
  Object {
    "name": "1",
    "other": "1",
  },
  Object {
    "name": "3",
    "other": 3,
  },
]
`;

exports[`helpers MapToArray: MapToArray-Values 1`] = `
Array [
  Object {
    "name": "2",
    "other": "1",
  },
  Object {
    "name": "3",
    "other": 3,
  },
]
`;

exports[`helpers MapToHash: MapToHash 1`] = `
Object {
  "1": Object {
    "name": undefined,
    "other": "1",
  },
  "3": Object {
    "name": undefined,
    "other": 3,
  },
}
`;

exports[`helpers MapToHash: MapToHash-Values 1`] = `
Object {
  "key 1": Object {
    "name": "2",
    "other": "1",
  },
  "key 2": Object {
    "name": "3",
    "other": 3,
  },
}
`;

exports[`helpers MapToHash: MapToHash-Values with process 1`] = `
Object {
  "key 1": Object {
    "name": "2",
    "other": "1",
  },
  "key 2": Object {
    "name": "3",
    "other": 3,
  },
}
`;
